refactor(dockerfile): 代码结构调整

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,19 +1,25 @@
 FROM alpine:3.16
 
 ARG IS_CHINA
+ARG DEV_ENVIRONMENT
 ENV REPOSITORY_DIR=/data/repository
 ENV BOOKS_DIR=/data/books
 ENV CONFIG_DIR=/data/config
 
 RUN if [ "$IS_CHINA" == "true" ]; then sed -i 's@dl-cdn.alpinelinux.org@mirrors.aliyun.com@g' /etc/apk/repositories; fi
-RUN apk update \
-    && if [ "$IS_CHINA" == "true" ]; then apk add --no-cache --repository http://mirrors.aliyun.com/alpine/v3.12/main/ nodejs=12.22.12-r0; else apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/v3.12/main/ nodejs=12.22.12-r0; fi \
-    && apk add npm \
-    && apk add go \
-    && apk add git \
-    && echo "export GO111MODULE=on" >> ~/.profile \
-    && echo "export GOPROXY=https://goproxy.cn" >> ~/.profile \
-    && source ~/.profile
+
+RUN apk update
+
+RUN apk add dumb-init \ 
+    git \
+    vim \
+    wget
+
+# install node
+RUN if [ "$IS_CHINA" == "true" ]; then apk add --no-cache --repository http://mirrors.aliyun.com/alpine/v3.12/main/ nodejs=12.22.12-r0; else apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/v3.12/main/ nodejs=12.22.12-r0; fi
+
+# install npm
+RUN apk add npm
 
 # install gitbook
 RUN npm install gitbook-cli -g 
@@ -22,5 +28,11 @@ RUN sed -i '/fs.stat / s/^\(.*\)$/\/\/\1/g' /usr/local/lib/node_modules/gitbook-
     && sed -i '/fs.lstat / s/^\(.*\)$/\/\/\1/g' /usr/local/lib/node_modules/gitbook-cli/node_modules/npm/node_modules/graceful-fs/polyfills.js
 RUN gitbook -V
 RUN find / -name copyPluginAssets.js | xargs sed -i 's@confirm: true@confirm: false@g'
+
+# install go
+RUN apk add go \
+    && echo "export GO111MODULE=on" >> ~/.profile \
+    && echo "export GOPROXY=https://goproxy.cn" >> ~/.profile \
+    && source ~/.profile
 
 EXPOSE 5454
